tests/wpt/tests/third_party/test262/test/language/import/import-defer/errors/module-throws/throws_FIXTURE.js
// Copyright (C) 2024 Igalia, S.L. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

throw { someError: "the error from throws_FIXTURE" }
